add publish config

--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "docs:serve": "vitepress serve docs",
     "test": "vitest"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nickgraffis/ng-spring.git"
